--- a/swift_exercise1/swift_exercise1/Base.lproj/Main.storyboard
+++ b/swift_exercise1/swift_exercise1/Base.lproj/Main.storyboard
@@ -86,6 +86,7 @@
                     <connections>
                         <segue destination="arJ-8u-7ff" kind="relationship" relationship="viewControllers" id="hIg-GW-4Qd"/>
                         <segue destination="pvO-e8-LHs" kind="relationship" relationship="viewControllers" id="HTu-qc-E9K"/>
+                        <segue destination="2vi-iK-Jod" kind="relationship" relationship="viewControllers" id="NTM-V8-brK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nUr-mQ-OYs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -252,11 +253,30 @@
             </objects>
             <point key="canvasLocation" x="3133" y="98"/>
         </scene>
+        <!--Episodes-->
+        <scene sceneID="0bw-gu-Xke">
+            <objects>
+                <viewController id="2vi-iK-Jod" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hl3-oQ-5Bf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="DLV-kr-oX1"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Episodes" image="speaker.2" catalog="system" landscapeImage="speaker.2" id="u5j-aF-eaI"/>
+                    <navigationItem key="navigationItem" id="sWE-Bf-oDs"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cyp-5C-YYb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1696" y="1388"/>
+        </scene>
     </scenes>
     <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="house" catalog="system" width="128" height="110"/>
+        <image name="speaker.2" catalog="system" width="128" height="97"/>
         <image name="video" catalog="system" width="128" height="83"/>
     </resources>
 </document>
